# Object-oriented-analysis-and-design-2

./: .gitignore
lab01/932304.anishko.ruslan.builder-pattern/: README.md
lab01/932304.anishko.ruslan.builder-pattern/backend/CVBuilder.Api/: CVBuilder.Api.csproj
lab01/932304.anishko.ruslan.builder-pattern/backend/CVBuilder.NoPattern.Api/: CVBuilder.NoPattern.Api.csproj  Program.cs
lab01/932304.anishko.ruslan.builder-pattern/frontend/: index.html  package-lock.json  package.json
lab02/: README.md
lab02/932304.anishko.ruslan.decorator-pattern/: README.md
lab02/932304.anishko.ruslan.decorator-pattern/backend-no-pattern/: CMakeLists.txt  main.cpp
lab02/932304.anishko.ruslan.decorator-pattern/backend-with-pattern/: CMakeLists.txt  main.cpp
lab02/932304.anishko.ruslan.decorator-pattern/frontend/: index.html  package-lock.json  package.json
lab03/: README.md
lab03/backend-no-observer/: main.py
lab03/backend-observer/: main.py
lab03/docs/: observer-diagram.drawio  report.md
lab03/frontend/: index.html  package-lock.json  package.json
lab03/frontend/src/: App.jsx  main.jsx
lab04/: README.md
lab04/932304.anishko.ruslan.value-object-pattern/backend-no-pattern/: build.gradle  settings.gradle
lab04/932304.anishko.ruslan.value-object-pattern/backend-value-object/: build.gradle  settings.gradle
lab04/932304.anishko.ruslan.value-object-pattern/docs/: value-object-diagram.drawio
lab04/932304.anishko.ruslan.value-object-pattern/frontend/: fowler_patterns_lab4.html  index.html  package-lock.json  package.json
(+51 files in other folders)
